<resources>
    <string name="ngay_build">Đã sửa : 9H 05/03/2015</string>
     <string name="pt_nc">Hệ số Nhân Công(NC)</string>
     <string name="pt_ncbs">Hệ số Nhân Công Bổ sung (NC1)</string>
     <string name="pt_chung">Tỉ lệ % Chi Phí Chung(C)</string>
     <string name="pt_chungbs">Tỉ lệ % Chi Phí Chung Bổ sung (NC1)</string>
     <string name="pt_tl">Tỉ lệ % thu nhập chịu thuế(TL)</string>
     <string name="pt_k">Tỉ lệ % xác minh lập chiết tính(K)</string>
     <string name="pt_vat">Tỉ lệ % thuế (VAT)</string>
     <string name="pt_tt">Tỉ lệ % Trực Tiếp Khác(TT)</string>
     <string name="nhom">Nhóm</string>
    <string name="ten_vattu">Tên vật tư</string>
    <string name="don_vi_tinh">Đơn vị tính</string>
    <string name="ma_Loai_cp">Loại CP (Vật tư hay nhân công)</string>
    <string name="hoan_tat">HOÀN TẤT</string>
    <string name="dongia_tg">Giá trọn gói</string>
    <string name="tieude">Tiêu đề</string>
    <string name="cancu">Căn cứ</string>
    <string name="chucvu1">Chức vụ 1</string>
    <string name="chucvu2">Chức vụ 2</string>
    <string name="chucvu3">Chức vụ 3</string>
    <string name="chucvu4">Chức vụ 4</string>
    <string name="chucvu5">Chức vụ 5</string>
    <string name="nguoiky1">Người ký 1</string>
    <string name="nguoiky2">Người ký 2</string>
    <string name="nguoiky3">Người ký 3</string>
    <string name="nguoiky4">Người ký 4</string>
    <string name="nguoiky5">Người ký 5</string>
    <string name="cham_de_tai">Chạm để tải</string>
    <string name="cham_de_cauhinh">Chạm để cấu hình</string>
    <string name="cauhinh_chuky">CẤU HÌNH CHỮ KÝ</string>
    <string name="ds_vattu">DANH SÁCH VẬT TƯ</string>
    <string name="cauhinh_heso">CẤU HÌNH HỆ SỐ</string>
    <string name="kiemtra_maychu">Kiểm tra máy chủ</string>
    <string name="alert_not_connect_server">Không kết nối được server</string>
    <string name="alert_nhan_du_lieu_thanh_cong"> Nhận dữ liệu thành công</string>
    <string name="alert_dang_thu_ket_noi_server">Đang thử kết nối server</string>
    <string name="alert_dang_lay_du_lieu">Đang lấy dữ liệu, xin chờ</string>
    <string name="alert_gui_thanh_cong">Gửi dữ liệu thành công !</string>
    <string name="alert_thietlap_thanhcong">Thiết lập kết nối thành công !</string>
    <string name="alert_thong_bao">THÔNG BÁO !</string>
    <string name="cai_dat">CÀI ĐẶT</string>
    <string name="ds_khachhang">DANH SÁCH KS</string>
    <string name="xem_vattu">XEM MẪU VẬT TƯ</string>
    <string name="lay_dulieu">LẤY DỮ LIỆU MỚI</string>
    <string name="thongtin_kh">THÔNG TIN KH</string>
    <string name="chiphi_kh">CHI PHÍ KH</string>
    <string name="chiphi_dl">CHI PHÍ ĐIỆN LỰC</string>
    <string name="chi_kh_tulo">KHÁCH HÀNG TỰ LO</string>
    <string name="lay_toado">Lấy tọa độ</string>
    <string name="hinh_anh">HÌNH ẢNH</string>
    <string name="chiet_tinh">CHIẾT TÍNH</string>
    <string name="gui_ho_so">GỬI HỒ SƠ</string>
    <string name="diem">Điểm</string>
    <string name="so_diem">Số điểm</string>
    <string name="app_name">KS Ha Noi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="them">Thêm</string>
    <string name="luu">Lưu</string>
    <string name="gps">GPS</string>
    <string name="photo">Photo</string>
    <string name="vattu">Vật Tư</string>
    <string name="madonvi">Mã Đơn Vị</string>
    <string name="ipserver">IP Server :</string>
    <string name="iplocal">IP Local :</string>
    <string name="huy">Huỷ</string>
    <string name="ok">OK</string>
    <string name="thoat">Thoát</string>
    <string name="timkiem">Tìm Kiếm</string>
    <string name="sotien">Số Tiền :</string>
    <string name="ghichu">Ghi Chú :</string>
    <string name="sodienthoai">Số Điện Thoại :</string>
    <string name="mayeucau">Mã Yêu Cầu  :</string>
    <string name="soluong">Số Lượng  :</string>
    <string name="loaikhachhang">Loại Khách Hàng  :</string>
    <string name="loaipha">Loại Điện Kế  :</string>
    <string name="caidat">Cài Đặt</string>
    <string name="donggia">Đơn Giá :</string>
    <string name="laygps">Lấy GPS</string>
    <string name="xembando">Xem Bản Đồ</string>
    <string name="tongtien">Tổng Tiền :</string>
    <string name="tienvatlieu">1. Chi phí Vật Liệu (VL):</string>
    <string name="tiennhancong">2. Chi phí Nhân Công (NC):</string>
    <string name="tienvanchuyen">Chi phí Vận Chuyển (VC):</string>
    <string name="tienthicong">3. Chi phí máy thi công (M):</string>
    <string name="chiphitructiepkhac">4. Chi phí trực tiếp khác (TT) :</string>
    <string name="chiphitructiep">I. Chi phí trực tiếp (T) :</string>
    <string name="chiphichung">II. chi phí chung C :</string>
    <string name="thunhapchiuthuetinhtruoc">III. Thu nhập chịu thuế tính trước (TL) :</string>
    <string name="khaosatvalapchiettinh">IV. khảo sát và lập chiết tính (K) :</string>
    <string name="giatrichiettinhtruocthue"> Giá trị chiết tính trước thuế (Gtt) :</string>
    <string name="thuegiatrigiatang">V. Tổng huế giá trị gia tăng (VAT) :</string>
    <string name="tonggiatri">TỔNG GIÁ TRỊ (G) :</string>
    <string name="loaichiphi"> LOẠI CHI PHÍ</string>
    <string name="dienluc">ĐIỆN LỰC</string>
    <string name="khachhang">KHÁCH HÀNG</string>
    <string name="hoantat">Hoàn Tất</string>
    <string name="capnhatthongtin">Cập Nhật Thông Tin Hồ Sơ</string>
    <string name="tentrambienap">Tên trạm biến áp</string>
    <string name="matram">Mã trạm</string>
    <string name="dia_chi_gan_dien">Địa chỉ gắn điện</string>
    <string name="congsuattram">CS Trạm (KVA)</string>
    <string name="dongdiendinhmuc">DĐ định mức (A)</string>
    <string name="pha_a">Pha A</string>
    <string name="pha_b">Pha B</string>
    <string name="pha_c">Pha C</string>
    <string name="taimax">Tải max (A)</string>
    <string name="loaitai">Loại Tải :</string>
    <string name="phu_tai">Phụ Tải :</string>
    <string name="phu_tai_a">Phụ tải A</string>
    <string name="phu_tai_b">Phụ tải B</string>
    <string name="phu_tai_c">Phụ tải C</string>
    <string name="kva">kVA</string>
    <string name="a">A</string>
    <string name="m">m</string>
    <string name="v">V</string>
    <string name="pha">Pha</string>
    <string name="vitritreocongto">Vị trí treo công tơ</string>
    <string name="trongnha">Trong Nhà</string>
    <string name="ngoaitru">Ngoài Trụ</string>
    <string name="truso">Trụ Số</string>
    <string name="khoangcachtucongtolapdatdentrambienap">Khoảng cách từ CT lắp đặt đến trạm biến áp (m) :</string>
    <string name="khoangcachtucongtolapdatdentrucluoihathe">Khoảng cách từ CT lắp đặt đến trục lưới hạ thế (m) :</string>
    <string name="congsuatdatthietbithucte">Công suất sử dụng thực tế (Kw)</string>
    <string name="kw">Kw</string>
    <string name="tuongungvoi">Tương ứng với (A) :</string>
    <string name="congtolienke2ben">Danh số liền kề 2 bên</string>
    <string name="stttrai">Danh số liền kề 2 bên trái</string>
    <string name="sttphai">Danh số liền kề 2 bên phải</string>
    <string name="tinhtrangnoidenghimuadien">Tình trạng nơi đề nghị mua điện</string>
    <string name="khongcocongto">Không có công tơ</string>
    <string name="cocongto">Có công tơ</string>
    <string name="dungchung">Dùng Chung</string>
    <string name="rieng">Riêng</string>
    <string name="makhachhang_pe">Mã khách hàng PB :</string>
    <string name="ketquakhaosat">8. KẾT QUẢ KHẢO SÁT :</string>
    <string name="khongtrongai">Không Trở ngại</string>
    <string name="trongai"> Trở ngại</string>
    <string name="lydo"> Lý Do :</string>
    <string name="x">X = </string>
    <string name="y"> Y = </string>
    <string name="tenkhachhang_ks">Tên KH_khảo sát</string>
    <string name="diachikhachhang_ks">Địa chỉ KH_khảo sát </string>
    <string name="sodienthoai_ks">Số ĐT_khảo sát</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="free">Free</string>
    <string name="line">Line</string>
    <string name="twoline">2 Line</string>
    <string name="tron">Circle</string>
    <string name="move">Move</string>
    <string name="text">Text</string>
    <string name="rec">Rec</string>
    <string name="chupanh"> Chụp ảnh</string>
    <string name="vesodo"> Vẽ sơ đồ</string>
    <string name="dokhoangcach">Đo đạc</string>
    <string name="mahoso">Mã hồ sơ :</string>
    <string name="diachi">Địa chỉ :</string>
    <string name="tenkhachhang">Tên khách hàng :</string>
    <string name="chon">Chọn</string>
    <string name="gui">Gửi</string>
    <string name="mavattu">Mã vật tư : </string>
    <string name="dinhmuc">Định mức : </string>
    <string name="so_nha_ks"> Số nhà khảo sát : </string>
    <string name="duong_pho_ks"> Đường phố khảo sát : </string>
    <string name="ve_tinh"> Vệ Tinh</string>
    <string name="ngay_yeu_cau"> Ngày yêu cầu :</string>
    <string name="hien_danh_sach"> Hiện danh sách</string>
    <string name="maso_stt"> Mã Sổ / Danh số :</string>
    <string name="len">lên</string>
    <string name="xuong">xuống</string>
    <string name="trai">trái</string>
    <string name="phai">phải</string>
    <string name="so_ho">Số Hộ </string>
    <string name="xong">Xong</string>
    <string name="chon_vattu">Chọn VTƯ</string>
    <string name="ko_ho_tro_thao">Không hỗ trợ tháo</string>
    <string name="ko_co_lk">Không có liên kết</string>
    <string name="chua_co_thong_tin">Chúng tôi chưa có thông tin về toạ độ !</string>
    <string name="da_ks">Đã Khảo Sát</string>
    <string name="chua_ks">Chưa Khảo Sát</string>
    <string name="xoa_het">Xoá\nhết</string>
    <string name="xoa_het_ngang">Xoá hết</string>
    <string name="xoa_diem_dang_chon">Bạn có muốn xoá điểm đang chọn không ?</string>
    <string name="xoa_tat_ca_diem">Bạn có muốn xoá tất cả điểm không ?</string>
    <string name="xoa_vattu_dang_chon">Bạn có muốn xoá vật tư đang chọn không ?</string>
    <string name="xoa_mau_dang_chon">Bạn có muốn xoá mẫu </string>
    <string name="khong_"> không ?</string>
    <string name="luu_toa_do">Lưu toạ độ</string>
    <string name="ma_tram">Mã trạm :</string>
    <string name="ten_tram">Tên trạm :</string>
    <string name="cs_tram">Công suất trạm :</string>
    <string name="dinh_danh">Định Danh :</string>
    <string name="dong_dien">Dòng điện :</string>
    <string name="he_so_ht">Hệ số hiện tại</string>
    <string name="ds_heso">Danh sách hệ số</string>
    <string name="PT_TT">PT_TT :</string>
    <string name="PT_C">PT_C :</string>
    <string name="PT_TL">PT_TL :</string>
    <string name="PT_K">PT_K :</string>
    <string name="PT_VAT">PT_VAT :</string>
    <string name="PT_NC">PT_NC :</string>
    <string name="PT_C1">PT_C1 :</string>
    <string name="PT_NC1">PT_NC1 :</string>
    <string name="ve">Vẽ</string>
    <string name="lay_du_lieu">Lấy thông tin</string>
    <string name="back">Trở\nlại</string>
    <string name="ten_dang_nhap">Tên đăng nhập (user name)</string>
    <string name="mat_khau">Mật khẩu (Password)</string>
    <string name="nhap_mat_khau_ban">Nhập mật khẩu của bạn</string>
    <string name="nhap_ten_dang_nhap_ban">Nhập tên đăng nhập của bạn</string>
    <string name="nhap_mat_khau">Nhập mật khẩu</string>
    <string name="vat_tu_da_chon">Vật tư đã chọn</string>
    <string name="khong_co_vtu_lk">Không có vật tư liên kết</string>
    <string name="khong_co_ncong_lk">Không có nhân công liên kết</string>
    <string name="tram_bien_ap">1. TRẠM BIẾN ÁP</string>
    <string name="tai">2. TẢI</string>
    <string name="tinh_trang">7. TÌNH TRẠNG</string>
    <string name="cong_suat_de_nghi">Công suất đề nghị</string>
</resources>