<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mau_nen"
    android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:background="@color/color_big_title" >

            <TextView
                android:id="@+id/TextView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ketquakhaosat"
                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/white"
                android:textStyle="bold"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/chk_KHONG_TRONGAI_ho_so_khao_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khongtrongai" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cong_suat_de_nghi"
            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edt_CONGSUAT_DENGHI_A_ho_so_khao_sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:focusable="false"
                android:ems="10" />

            <TextView
                android:id="@+id/TextView25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/a"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edt_CONGSUAT_DENGHI_V_ho_so_khao_sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:focusable="false"
                android:ems="10">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/TextView23"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/v"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edt_CONGSUAT_DENGHI_PHA_ho_so_khao_sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:focusable="false"
                android:ems="10" />

            <TextView
                android:id="@+id/TextView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/pha"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:gravity="center"/>
        </LinearLayout>
		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maso_stt"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                 android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_MASO_STT_ho_so_khao_sat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:focusable="false" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/chk_TRONGAI_ho_so_khao_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trongai" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lydo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold"  />

            <AutoCompleteTextView
                android:id="@+id/aut_LY_DO_ho_so_khao_sat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false" />
        </LinearLayout>

</LinearLayout>